2006-07-23  Daniel Nylander  <po@danielnylander.se>

        * docs/sv/sv.po: Updated Swedish translation.
	
2006-07-11  Philip Langdale  <philipl@mail.utexas.edu>

	* gweather-pref.c: (temp_combo_changed_cb, speed_combo_changed_cb,
	pres_combo_changed_cb, dist_combo_changed_cb)
	Call gweather_dialog_update conditionally - the dialog doesn't
	exist if it's not displayed.

2006-06-29  Daniel Nylander  <po@danielnylander.se>

        * docs/sv/sv.po: Added Swedish translation.
	
2006-06-27  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: split Congo into Democratic Republic of and
	  Republic of. Patch from Denis Jacquerye <moyogo@gmail.com>.
	  Closes #340712.

2006-05-29  Philip Langdale  <philipl@mail.utexas.edu>

	* gweather.h
	* gweather-applet.c: Remove dead code for managing lifetime of
	About Dialog. This is now done automatically by Gtk+.

	* gweather-applet.h: Remove declarations of non-existent functions.

2006-05-29  Philip Langdale  <philipl@mail.utexas.edu>

	This change refactors the details dialog and is the part two of the
	refactoring I promised below.

	gweather-dialog.h
	gweather-dialog.c: (everything). Make the details dialog a real GObject
	inheriting from GtkDialog. As a bonus, dead code was revealed by the
	cleanup and has been removed.

	gweather-pref.c: (*_combo_changed). Update to reflect the changed
	signature of gweather_dialog_update.

	gweather.h: Remove all details dialog widgets from struct.

	gweather-applet.c: (details_cb, update_finish). Update the instantiate
	the details dialog properly and consolidate singleton handling.

2006-02-11  Philip Langdale  <philipl@mail.utexas.edu>

	* gweather-pref.c: There's one more place where the wrong user_data was
	being passed.

2006-02-10  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-pref.c: fix a bug where the wrong pointer was being passed
	  as user_data in auto_update_toggled. Should fix #330191.

2006-02-02  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>
