@@ -9619,7 +9619,7 @@
       <location>
         <!-- Translators: This is in Michigan in the United States. -->
         <_name>Cheboygan</_name>
-        <code>KY15</code>
+        <code>KSLH</code>
         <coordinates>45-39-13N 084-31-09W</coordinates>
       </location>
       <location>
@@ -34078,6 +34078,11 @@
       <coordinates>37-15N 009-48E</coordinates>
     </location>
     <location>
+      <name>Bordj El Amri</name>
+      <code>DTTI</code>
+      <coordinates>36-43N 009-56E</coordinates>
+    </location>
+    <location>
       <_name>Djerba Mellita</_name>
       <code>DTTJ</code>
       <coordinates>33-52N 010-46E</coordinates>
@@ -34121,6 +34126,11 @@
       <_name>Monastir-Skanes</_name>
       <code>DTTM</code>
       <coordinates>35-40N 010-45E</coordinates>
+    </location>
+    <location>
+      <name>Nefta</name>
+      <code>DTTZ</code>
+      <coordinates>33-56N 008-66E</coordinates>
     </location>
     <location>
       <_name>Remada</_name>
@@ -41245,6 +41255,11 @@
       <_name>Florianópolis</_name>
       <code>SBFL</code>
       <coordinates>27-40S 048-33W</coordinates>
+    </location>
+    <location>
+      <name>Formiga</name>
+      <code>SNEO</code>
+      <coordinates>20-24S 045-29W</coordinates>
     </location>
     <location>
       <_name>Fortaleza</_name>
