@@ -1,3 +1,8 @@
+2006-07-23  Davyd Madeley  <davyd@madeley.id.au>
+
+	* Locations.xml.in: locations love. Patch from John N. Laliberte:
+	  Closes #340421. Patch from Thierry Moisan.
+
 2006-07-23  Daniel Nylander  <po@danielnylander.se>
 
         * docs/sv/sv.po: Updated Swedish translation.
